--- a/面试问题.md
+++ b/面试问题.md
@@ -1,6 +1,9 @@
 # 面试被问过的问题
 
 * 介绍一下这个项目(几乎是必问的)
+回答：
+这是个Web服务器，解析了get、head请求，可处理静态资源，支持HTTP长连接，支持管线化请求，并实现了异步日志，记录服务器运行状态。
+
 * 定时器是怎么实现的？还有什么实现方式？
 * 实现一个无锁队列(用原子操作)
 * eventfd是什么？有什么好处？
