--- a/面试问题.md
+++ b/面试问题.md
@@ -2,7 +2,10 @@
 
 * 介绍一下这个项目(几乎是必问的)
 答：
-这是个web服务器，实现
+这是个web服务器，实现解析了get、head请求，可处理静态资源，支持HTTP长连接，支持管线化请求，并实现了异步日志，记录服务器运行状态。
+什么是web服务器？
+1.web服务器也可叫做后台，是为网页提供数据信息的服务程序2.拥有存储数据，处理，发送数据的功能。
+比如我们访问 http:// http://baidu.com，其实就是在使用百度的 Server 提供的服务。
 * 定时器是怎么实现的？还有什么实现方式？
 * 实现一个无锁队列(用原子操作)
 * eventfd是什么？有什么好处？
