--- a/面试问题.md
+++ b/面试问题.md
@@ -6,6 +6,16 @@
 什么是web服务器？
 1.web服务器也可叫做后台，是为网页提供数据信息的服务程序2.拥有存储数据，处理，发送数据的功能。
 比如我们访问 http:// http://baidu.com，其实就是在使用百度的 Server 提供的服务。
+什么是get、head请求？
+HEAD请求允许客户端仅向服务器请求某个资源的响应头, 而不要真正的下载该资源本身, 省略了响应体.
+GET方法请求服务器返回的响应头则包含响应体.
+什么是静态资源？
+html：静态资源 ,浏览器可以看得懂，它可以有变量；
+JSP/Servlet：动态资源,需要先转换成html,再给浏览器看
+什么是http长连接？
+HTTP协议与TCP/IP协议的关系：HTTP的长连接和短连接本质上是TCP长连接和短连接。HTTP属于应用层协议，在传输层使用TCP协议，在网络层使用IP协议。IP协议主要解决网络路由和寻址问题，TCP协议主要解决如何在IP层之上可靠的传递数据包，使在网络上的另一端收到发端发出的所有包，并且顺序与发出顺序一致。TCP有可靠，面向连接的特点。从 HTTP/1.1起，默认使用长连接，用以保持连接特性。
+什么是管线化请求？
+
 * 定时器是怎么实现的？还有什么实现方式？
 * 实现一个无锁队列(用原子操作)
 * eventfd是什么？有什么好处？
