--- a/面试问题.md
+++ b/面试问题.md
@@ -15,7 +15,11 @@ JSP/Servlet：动态资源,需要先转换成html,再给浏览器看
 什么是http长连接？
 HTTP协议与TCP/IP协议的关系：HTTP的长连接和短连接本质上是TCP长连接和短连接。HTTP属于应用层协议，在传输层使用TCP协议，在网络层使用IP协议。IP协议主要解决网络路由和寻址问题，TCP协议主要解决如何在IP层之上可靠的传递数据包，使在网络上的另一端收到发端发出的所有包，并且顺序与发出顺序一致。TCP有可靠，面向连接的特点。从 HTTP/1.1起，默认使用长连接，用以保持连接特性。
 什么是管线化请求？
-
+HTTP管线化是将多个HTTP要求（request）整批提交的技术，而在传送过程中不需先等待服务端的回应。管线化机制须通过永久连接（persistent connection）完成，仅 HTTP/1.1 支持此技术（HTTP/1.0 不支持），并且只有 GET 和 HEAD 要求可以进行管线化，而 POST 则有所限制。此外，初次创建连接时也不应启动管线机制，因为对方（服务器）不一定支持 HTTP/1.1 版本的协议。浏览器将 HTTP 要求大批提交可大幅缩短页面的加载时间，特别是在传输延迟（lag/latency）较高的情况下（如卫星连接）。
+什么是异步日志？
+所谓同步日志，即当输出日志时，必须等待日志输出语句执行完毕后，才能执行后面的业务逻辑语句。，而使用异步日志进行输出时，日志输出语句与业务逻辑语句并不是在同一个线程中运行，而是有专门的线程用于进行日志输出操作，处理业务逻辑的主线程不用等待即可执行后续业务逻辑。可减少系统开销。
+什么是服务器运行状态？
+CPU、内存等信息。
 * 定时器是怎么实现的？还有什么实现方式？
 * 实现一个无锁队列(用原子操作)
 * eventfd是什么？有什么好处？
