--- a/面试问题.md
+++ b/面试问题.md
@@ -81,6 +81,8 @@ HTTP 报文是简单的格式化数据块。每条报文都包含一条来客户
 * 线程的唤醒还有哪些方式？
 
 * 怎么检查内存泄漏的？
+调用了malloc/new等内存申请的操作，但缺少了对应的free/delete，总之就是，malloc/new比free/delete的数量多。
+检测内存泄漏的关键原理就是，检查malloc/new和free/delete是否匹配
 * 用到了哪些智能指针和RAII机制，几种锁的区别是什么
 * 任务队列是怎么实现的，除了加锁还有什么方式？
 * 如何解决死锁？
